--- a/src/shared/components/AnimatedModal/animatedStyle.css
+++ b/src/shared/components/AnimatedModal/animatedStyle.css
@@ -8,7 +8,7 @@
   position: absolute;
   width: 100%;
   height: 2px;
-  background-color: #101018;
+  background-color: red;
   transform-origin: center;
 }
 
